# thermalright-lcd-control

./: IMPLEMENTATION_SUMMARY.md  README.md  WINDOWS11_IMPLEMENTATION.md  install_windows.bat  install_windows.ps1  pyproject.toml  run_gui_windows.bat
docs/: ISTRIPPER_CONTENT_USAGE.md  ISTRIPPER_FULL_INTEGRATION.md  ISTRIPPER_INTEGRATION.md  TROUBLESHOOTING_WINDOWS.md  WINDOWS11_SETUP.md  WINDOWS_SERVICE_SETUP.md
scripts/windows/: install_windows_service.bat  install_windows_service.ps1  uninstall_windows_service.bat  uninstall_windows_service.ps1
src/thermalright_lcd_control/: main_gui.py
src/thermalright_lcd_control/common/: app_detector.py  detected_apps_config.py  platform_utils.py
src/thermalright_lcd_control/device_controller/display/: config.py  frame_manager.py  generator.py  hid_devices.py  usb_devices.py  window_capture.py
src/thermalright_lcd_control/device_controller/metrics/: cpu_metrics.py  gpu_amd_windows.py  gpu_detector.py  gpu_intel_windows.py  gpu_metrics.py
src/thermalright_lcd_control/diagnostics/: __init__.py  system_checker.py
src/thermalright_lcd_control/gui/wizards/: __init__.py  istripper_wizard.py  usb_driver_wizard.py
src/thermalright_lcd_control/integrations/: __init__.py  istripper_manager.py
src/thermalright_lcd_control/service/: __init__.py  windows_service.py  windows_service_manager.py
src/thermalright_lcd_control/ui/: __init__.py  system_tray.py
src/thermalright_lcd_control/utils/: __init__.py  codec_detector.py  task_scheduler.py  zadig_manager.py
tests/: test_hid_lazy_import.py  test_numpy_global_state.py
